--- a/ext/socket/Makefile.in
+++ b/ext/socket/Makefile.in
@@ -6,11 +6,12 @@ SO = $(top_srcdir)/ext/socket.$(SOEXT)
 CC = @CC@
 CFLAGS = @CFLAGS@
 LDFLAGS = @LDFLAGS@
+LIBS = @LIBS@
 
 all: $(SO)
 
 $(SO): socket.$(OBJEXT)
-	$(CC) -o $@ -shared $(LDFLAGS) socket.$(OBJEXT)
+	$(CC) -o $@ -shared $(LDFLAGS) socket.$(OBJEXT) $(LIBS)
 
 socket.$(OBJEXT): socket.c
 	$(CC) -o $@ -c $(CFLAGS) socket.c
