--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,6 @@ bdwgc/.dirstamp
 bdwgc/bdw-gc.pc
 bdwgc/cord/.dirstamp
 config.h
-config.h.in
 config.log
 config.status
 config.status.lineno
@@ -221,6 +220,7 @@ gmp/mpn/umul.asm
 gmp/mpz/fac_ui.h
 gmp/tune/sqr_basecase.c
 html
+include/yog/config.h.in
 include/yog/inst.h
 include/yog/opcodes.h
 include/yog/token.h
