--- a/ext/socket/Makefile.in
+++ b/ext/socket/Makefile.in
@@ -8,15 +8,20 @@ CFLAGS = @CFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@ @IMPORT_LIB@
 
+OBJS = socket.$(OBJEXT)
+
 all: $(SO)
 
-$(SO): socket.$(OBJEXT)
+$(SO): $(OBJS)
 	$(CC) -o $@ -shared $(LDFLAGS) socket.$(OBJEXT) $(LIBS)
 
-socket.$(OBJEXT): socket.c
-	$(CC) -o $@ -c $(CFLAGS) socket.c
+.c.o:
+	$(CC) -o $@ -c $(CFLAGS) $<
 
 Makefile: Makefile.in
 	cd $(top_srcdir) && ./config.status ext/socket/$@
+
+clean:
+	rm -f $(SO) $(OBJS)
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
