--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,8 @@ src/yog-mark-sweep
 src/yog-mark-sweep-compact
 stamp-h1
 tags
+tests/gc/Makefile.in
+tests/gc/test-mark-sweep-compact
 tests/test_package4.ilk
 tests/test_package5.ilk
 tests/test_package6.ilk
