Changed extensions to be for generational GC.

--- a/ext/Makefile.common.in
+++ b/ext/Makefile.common.in
@@ -2,7 +2,7 @@
 OBJEXT = @OBJEXT@
 SOEXT = @SOEXT@
 CC = @CC@
-CFLAGS = @CFLAGS@
+CFLAGS = @CFLAGS@ -DGC_GENERATIONAL
 CXXFLAGS = @CXXFLAGS@ @CFLAGS@
 CXX = @CXX@
 LDFLAGS = @LDFLAGS@
