Added an issue for the documentation.

--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -64,3 +64,12 @@ releases:
     - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
     - released
     - ""
+- !ditz.rubyforge.org,2008-03-06/release 
+  name: 0.0.5
+  status: :unreleased
+  release_time: 
+  log_events: 
+  - - 2010-04-18 15:23:40.220757 Z
+    - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
+    - created
+    - ""
