Changed Windows installer not to include DLLs in the ext directory.

--- a/installer.nsi.in
+++ b/installer.nsi.in
@@ -18,7 +18,7 @@ Section
   SetOutPath "$INSTDIR\lib"
   File /r lib\*.yg
   File ext\*.yg
-  File ext\*.dll
+#  File ext\*.dll
 
   SetOutPath "$INSTDIR\doc"
   File /r doc\html\*.*
