--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -2,6 +2,8 @@
 prefix = @prefix@
 VERSION = @PACKAGE_VERSION@
 DIR = $(prefix)/lib/yog/$(VERSION)
+install_sh = @install_sh@
+install_sh_DATA = $(install_sh) -c -m 644
 
 PKGS = hq9plus.yg optparse.yg peg.yg
 
@@ -10,7 +12,7 @@ install:
 	for f in `find . -name "*.yg"`; \
 	do \
 		mkdir -p `dirname $(DIR)/$${f}`; \
-		install --mode 644 $${f} $(DIR)/$${f}; \
+		$(install_sh_DATA) $${f} $(DIR)/$${f}; \
 	done
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
