--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -4,7 +4,8 @@ prefix = @prefix@
 CC = @CC@
 SOEXT = @SOEXT@
 
-PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT)
+PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT) \
+       foo.$(SOEXT)
 CFLAGS = -shared -I.. -I../include -Wall -DGENERATIONAL @CFLAGS@
 LIBS = @IMPORT_LIB@
 
@@ -19,6 +20,9 @@ test_package5.$(SOEXT): test_package5.c Makefile
 
 test_package6.$(SOEXT): test_package6.c Makefile
 	$(CC) -o $@ $(CFLAGS) test_package6.c $(LIBS)
+
+foo.$(SOEXT): foo.c Makefile
+	$(CC) -o $@ $(CFLAGS) foo.c $(LIBS)
 
 clean:
 	find . -name "core*" -print0 | xargs -0 rm -f
