--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -6,7 +6,7 @@ SOEXT = @SOEXT@
 
 PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT) \
        test_lib.$(SOEXT)
-CFLAGS = -shared -I.. -I../include -Wall -DGENERATIONAL @CFLAGS@
+CFLAGS = -shared -I.. -I../include -Wall -Werror -DGENERATIONAL @CFLAGS@
 LIBS = @IMPORT_LIB@
 
 all: $(PKGS)
