--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -77,3 +77,12 @@ releases:
     - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
     - released
     - ""
+- !ditz.rubyforge.org,2008-03-06/release 
+  name: 0.0.6
+  status: :unreleased
+  release_time: 
+  log_events: 
+  - - 2010-05-26 15:54:29.798721 Z
+    - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
+    - created
+    - ""
