Added deb target to Makefile for building deb packages.

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,4 +63,7 @@ installer: installer.nsi
 configure.ac: yog.m4
 	autoconf
 
+deb:
+	dpkg-buildpackage
+
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
