Fixed configure.ac and ext/Makefile.am to make yaml package out.

--- a/configure.ac
+++ b/configure.ac
@@ -237,7 +237,7 @@ case "${host}" in
     ;;
 esac
 
-YOG_CHECK_EXT([yaml], [syck_new_parser], [syck])
+YOG_CHECK_EXT([syck], [syck_new_parser], [yaml])
 YOG_CHECK_EXT([zip], [zip_open], [zip])
 
 AC_SUBST(BDWGC_DIR)
