--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -9,8 +9,10 @@ PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT) \
 CFLAGS = -shared -I.. -I../include -Wall -Werror -DGENERATIONAL @CFLAGS@
 LIBS = @IMPORT_LIB@
 
-all: $(PKGS)
+all: lib
 	py.test --showlocals
+
+lib: $(PKGS)
 
 test_package4.$(SOEXT): test_package4.c Makefile
 	$(CC) -o $@ $(CFLAGS) test_package4.c $(LIBS)
