Implemented Env#[], Env#get and Env#[]=.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,8 @@ COMMON_SOURCES = arg.c array.c bignum.c binary.c bool.c builtins.c class.c \
 		 float.c frame.c callable.c gc.c get_args.c inst.c lexer.c \
 		 main.c misc.c module.c nil.c object.c package.c parser.y \
 		 property.c regexp.c repl.c set.c sprintf.c stacktrace.c \
-		 string.c symbol.c table.c thread.c value.c vm.c getopt.c ffi.c
+		 string.c symbol.c table.c thread.c value.c vm.c getopt.c \
+		 ffi.c env.c
 DEFAULT_INCLUDES = -I.
 CFLAGS_COMMON = -I$(top_srcdir)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
 		-I$(GMP_DIR) -I$(LIBFFI_DIR)/include -Wall -g -DYOG_CORE \
