Reimplemented the socket package with Yog.

--- a/configure.ac
+++ b/configure.ac
@@ -192,7 +192,7 @@ AC_DEFINE_UNQUOTED([PREFIX], ["$prefix"], [Define install directory])
 AC_CONFIG_FILES([Makefile src/Makefile tools/lemon/Makefile tests/Makefile
                  ext/Makefile lib/Makefile doc/Makefile installer.nsi
                  ext/concurrent/Makefile ext/yaml/Makefile ext/zip/Makefile
-                 ext/socket/Makefile ext/Makefile.common])
+                 ext/Makefile.common])
 if test "${cunit}" == "yes"
 then
     AC_CONFIG_FILES([tests/gc/Makefile])
