Arranged Makefiles in ext to pass -I$(top_srcdir)/include to gcc.

--- a/ext/yaml/Makefile.in
+++ b/ext/yaml/Makefile.in
@@ -13,7 +13,7 @@ $(SO): $(OBJS)
 	$(CC) -o $@ -shared $(LDFLAGS) $(OBJS) $(LIBS)
 
 .c.o:
-	$(CC) -o $@ -c $(CFLAGS) $<
+	$(CC) -o $@ -c $(CFLAGS) -I$(top_srcdir)/include $<
 
 Makefile: Makefile.in
 	cd $(top_srcdir) && ./config.status ext/yaml/$@
