Arranged src/Makefile.am not to include current directory.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,7 +20,7 @@ COMMON_SOURCES = arg.c array.c bignum.c binary.c bool.c builtins.c class.c \
 		 property.c regexp.c repl.c set.c sprintf.c stacktrace.c \
 		 string.c symbol.c table.c thread.c value.c vm.c getopt.c \
 		 ffi.c env.c
-DEFAULT_INCLUDES = -I.
+DEFAULT_INCLUDES =
 CFLAGS_COMMON = -I$(top_srcdir)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
 		-I$(GMP_DIR) -I$(LIBFFI_DIR)/include -Wall -g -DYOG_CORE -O2
 LDFLAGS_COMMON = @LDFLAGS_COMMON@
