--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,7 +19,7 @@ COMMON_SOURCES = arg.c array.c bignum.c binary.c bool.c builtins.c class.c \
 		 main.c misc.c module.c nil.c object.c package.c parser.y \
 		 property.c regexp.c repl.c set.c sprintf.c stacktrace.c \
 		 string.c symbol.c table.c thread.c value.c vm.c getopt.c \
-		 ffi.c env.c
+		 ffi.c env.c handle.c
 DEFAULT_INCLUDES =
 CFLAGS_COMMON = -I$(top_srcdir)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
 		-I$(GMP_DIR) -I$(LIBFFI_DIR)/include -Wall -g -DYOG_CORE -O2
