Changed YOG_CHECK_ERRNO macro in configure.ac to accept plural arguments.
I refered the AC_CHECK_HEADERS's definition in
/usr/share/autoconf/autoconf/headers.m4 at Ubuntu Linux 8.04 to write this
patch.

--- a/configure.ac
+++ b/configure.ac
@@ -38,126 +38,24 @@ AC_CHECK_SIZEOF(int)
 AC_CHECK_SIZEOF(long)
 AC_CHECK_SIZEOF(long long)
 AC_C_INLINE
-YOG_CHECK_ERRNO([E2BIG])
-YOG_CHECK_ERRNO([EACCESS])
-YOG_CHECK_ERRNO([EADDRINUSE])
-YOG_CHECK_ERRNO([EADDRNOTAVAIL])
-YOG_CHECK_ERRNO([EAFNOSUPPORT])
-YOG_CHECK_ERRNO([EAGAIN])
-YOG_CHECK_ERRNO([EALREADY])
-YOG_CHECK_ERRNO([EBADE])
-YOG_CHECK_ERRNO([EBADFD])
-YOG_CHECK_ERRNO([EBADF])
-YOG_CHECK_ERRNO([EBADMSG])
-YOG_CHECK_ERRNO([EBADRQC])
-YOG_CHECK_ERRNO([EBADR])
-YOG_CHECK_ERRNO([EBADSLT])
-YOG_CHECK_ERRNO([EBUSY])
-YOG_CHECK_ERRNO([ECANCELED])
-YOG_CHECK_ERRNO([ECHILD])
-YOG_CHECK_ERRNO([ECHRNG])
-YOG_CHECK_ERRNO([ECOMM])
-YOG_CHECK_ERRNO([ECONNABORTED])
-YOG_CHECK_ERRNO([ECONNREFUSED])
-YOG_CHECK_ERRNO([ECONNRESET])
-YOG_CHECK_ERRNO([EDEADLK])
-YOG_CHECK_ERRNO([EDEADLOCK])
-YOG_CHECK_ERRNO([EDESTADDRREQ])
-YOG_CHECK_ERRNO([EDOM])
-YOG_CHECK_ERRNO([EDQUOT])
-YOG_CHECK_ERRNO([EEXIST])
-YOG_CHECK_ERRNO([EFAULT])
-YOG_CHECK_ERRNO([EFBIG])
-YOG_CHECK_ERRNO([EHOSTDOWN])
-YOG_CHECK_ERRNO([EHOSTUNREACH])
-YOG_CHECK_ERRNO([EIDRM])
-YOG_CHECK_ERRNO([EILSEQ])
-YOG_CHECK_ERRNO([EINPROGRESS])
-YOG_CHECK_ERRNO([EINTR])
-YOG_CHECK_ERRNO([EINVAL])
-YOG_CHECK_ERRNO([EIO])
-YOG_CHECK_ERRNO([EISCONN])
-YOG_CHECK_ERRNO([EISDIR])
-YOG_CHECK_ERRNO([EISNAM])
-YOG_CHECK_ERRNO([EKEYEXPIRED])
-YOG_CHECK_ERRNO([EKEYREJECTED])
-YOG_CHECK_ERRNO([EKEYREVOKED])
-YOG_CHECK_ERRNO([EL2HLT])
-YOG_CHECK_ERRNO([EL2NSYNC])
-YOG_CHECK_ERRNO([EL3HLT])
-YOG_CHECK_ERRNO([EL3RST])
-YOG_CHECK_ERRNO([ELIBACC])
-YOG_CHECK_ERRNO([ELIBBAD])
-YOG_CHECK_ERRNO([ELIBEXEC])
-YOG_CHECK_ERRNO([ELIBMAX])
-YOG_CHECK_ERRNO([ELIBSCN])
-YOG_CHECK_ERRNO([ELOOP])
-YOG_CHECK_ERRNO([EMEDIUMTYPE])
-YOG_CHECK_ERRNO([EMFILE])
-YOG_CHECK_ERRNO([EMLINK])
-YOG_CHECK_ERRNO([EMSGSIZE])
-YOG_CHECK_ERRNO([EMULTIHOP])
-YOG_CHECK_ERRNO([ENAMETOOLONG])
-YOG_CHECK_ERRNO([ENETDOWN])
-YOG_CHECK_ERRNO([ENETRESET])
-YOG_CHECK_ERRNO([ENETUNREACH])
-YOG_CHECK_ERRNO([ENFILE])
-YOG_CHECK_ERRNO([ENOBUFS])
-YOG_CHECK_ERRNO([ENODATA])
-YOG_CHECK_ERRNO([ENODEV])
-YOG_CHECK_ERRNO([ENOENT])
-YOG_CHECK_ERRNO([ENOEXEC])
-YOG_CHECK_ERRNO([ENOKEY])
-YOG_CHECK_ERRNO([ENOLCK])
-YOG_CHECK_ERRNO([ENOLINK])
-YOG_CHECK_ERRNO([ENOMEDIUM])
-YOG_CHECK_ERRNO([ENOMEM])
-YOG_CHECK_ERRNO([ENOMSG])
-YOG_CHECK_ERRNO([ENONET])
-YOG_CHECK_ERRNO([ENOPKG])
-YOG_CHECK_ERRNO([ENOPROTOOPT])
-YOG_CHECK_ERRNO([ENOSPC])
-YOG_CHECK_ERRNO([ENOSR])
-YOG_CHECK_ERRNO([ENOSTR])
-YOG_CHECK_ERRNO([ENOSYS])
-YOG_CHECK_ERRNO([ENOTBLK])
-YOG_CHECK_ERRNO([ENOTCONN])
-YOG_CHECK_ERRNO([ENOTDIR])
-YOG_CHECK_ERRNO([ENOTEMPTY])
-YOG_CHECK_ERRNO([ENOTSOCK])
-YOG_CHECK_ERRNO([ENOTSUP])
-YOG_CHECK_ERRNO([ENOTTY])
-YOG_CHECK_ERRNO([ENOTUNIQ])
-YOG_CHECK_ERRNO([ENXIO])
-YOG_CHECK_ERRNO([EOPNOTSUPP])
-YOG_CHECK_ERRNO([EOVERFLOW])
-YOG_CHECK_ERRNO([EPERM])
-YOG_CHECK_ERRNO([EPFNOSUPPORT])
-YOG_CHECK_ERRNO([EPIPE])
-YOG_CHECK_ERRNO([EPROTONOSUPPORT])
-YOG_CHECK_ERRNO([EPROTOTYPE])
-YOG_CHECK_ERRNO([EPROTO])
-YOG_CHECK_ERRNO([ERANGE])
-YOG_CHECK_ERRNO([EREMCHG])
-YOG_CHECK_ERRNO([EREMOTEIO])
-YOG_CHECK_ERRNO([EREMOTE])
-YOG_CHECK_ERRNO([ERESTART])
-YOG_CHECK_ERRNO([EROFS])
-YOG_CHECK_ERRNO([ESHUTDOWN])
-YOG_CHECK_ERRNO([ESOCKTNOSUPPORT])
-YOG_CHECK_ERRNO([ESPIPE])
-YOG_CHECK_ERRNO([ESRCH])
-YOG_CHECK_ERRNO([ESTALE])
-YOG_CHECK_ERRNO([ESTRPIPE])
-YOG_CHECK_ERRNO([ETIMEDOUT])
-YOG_CHECK_ERRNO([ETIME])
-YOG_CHECK_ERRNO([ETXTBSY])
-YOG_CHECK_ERRNO([EUCLEAN])
-YOG_CHECK_ERRNO([EUNATCH])
-YOG_CHECK_ERRNO([EUSERS])
-YOG_CHECK_ERRNO([EWOULDBLOCK])
-YOG_CHECK_ERRNO([EXDEV])
-YOG_CHECK_ERRNO([EXFULL])
+YOG_CHECK_ERRNO([E2BIG EACCESS EADDINUSE EADDRNOTAVAIL EAFNOSUPPORT EAGAIN \
+                 EALREADY EBADE EBADFD EBADF EBADMSG EBADRQC EBADR EBADSLT \
+                 EBUSY ECANCELED ECHILD ECHRNG ECOMM ECONNABORTED ECONNREFUSED \
+                 ECONNRESET EDEADLK EDEADLOCK EDESTADDRREQ EDOM EDQUOT EEXIST \
+                 EFAULT EFBIG EHOSTDOWN EHOSTUNREACH EIDRM EILSEQ EINPROGRESS \
+                 EINTR EINVAL EIO EISCONN EISDIR EISNAM EKEYEXPIRED \
+                 EKEYREJECTED EKEYREVOKED EL2HLT EL2NSYNC EL3HLT EL3RST \
+                 ELIBACC ELIBBAD ELIBEXEC ELIBMAX ELIBSCN ELOOP EMEDIUMTYPE \
+                 EMFILE EMLINK EMSGSIZE EMULTIHOP ENAMETOOLONG ENETDOWN \
+                 ENETRESET ENETUNREACH ENFILE ENOBUFS ENODATA ENODEV ENOENT \
+                 ENOEXEC ENOKEY ENOLCK ENOLINK ENOMEDIUM ENOMEM ENOMSG ENONET \
+                 ENOPKG ENOPROTOOPT ENOSPC ENOSR ENOSTR ENOSYS ENOTBLK \
+                 ENOTCONN ENOTDIR ENOTEMPTY ENOTSOCK ENOTSUP ENOTTY ENOTUNIQ \
+                 ENXIO EOPNOTSUPP EOVERFLOW EPERM EPFNOSUPPORT EPIPE \
+                 EPROTONOSUPPORT EPROTOTYPE EPROTO ERANGE EREMCHG EREMOTEIO \
+                 EREMOTE ERESTART EROFS ESHUTDOWN ESOCKTNOSUPPORT ESPIPE ESRCH \
+                 ESTALE ESTRPIPE ETIMEDOUT ETIME ETXTBSY EUCLEAN EUNATCH \
+                 EUSERS EWOULDBLOCK EXDEV EXFULL])
 
 # Checks for library functions.
 AC_FUNC_MALLOC
