Changed internal encoding of strings to UTF-32.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.exe
 *.exp
 *.ilk
+*.inc
 *.la
 *.lib
 *.lo
@@ -246,22 +247,10 @@ onig/sample/syntax
 parser.output
 pthreads-w32/libpthreadGC2.stamp
 src/Makefile.in
-src/array.inc
-src/builtins.inc
-src/builtins_unix.inc
-src/builtins_win.inc
-src/code.inc
-src/compile.inc
-src/dict.inc
-src/errno.inc
-src/eval.inc
 src/inst.c
-src/keywords.inc
 src/miniyog
-src/object.inc
 src/parser.c
 src/parser.out
-src/string.inc
 src/yog
 src/yog-bdw
 src/yog-copying
