--- a/ext/Makefile.common.in
+++ b/ext/Makefile.common.in
@@ -7,7 +7,8 @@ GMP_DIR = $(top_srcdir)/gmp
 LIBFFI_DIR = $(top_srcdir)/libffi
 BDWGC_DIR = $(top_srcdir)/bdwgc
 CFLAGS = @CFLAGS@ -I$(top_srcdir)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
-	 -I$(GMP_DIR) -I$(LIBFFI_DIR)/include -DGC_GENERATIONAL -Wall -g -O2
+	 -I$(GMP_DIR) -I$(LIBFFI_DIR)/include -DGC_GENERATIONAL -Wall -Werror \
+	 -g -O2
 CXXFLAGS = @CXXFLAGS@ @CFLAGS@
 CXX = @CXX@
 LDFLAGS = @LDFLAGS@
